2013-01-30  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r141205.
        http://trac.webkit.org/changeset/141205
        https://bugs.webkit.org/show_bug.cgi?id=108353

        Command for running tests on windows needs to be investigated.
        (Requested by lforschler on #webkit).

        * Scripts/webkitpy/tool/commands/earlywarningsystem.py:
        (WinEWS):

2013-01-30  Tony Chang  <tony@chromium.org>

        [Chromium] Enable textarea resize corner for tests
        https://bugs.webkit.org/show_bug.cgi?id=108385

        Reviewed by Ojan Vafai.

        We should test what we ship. Also, this makes us pass more tests in content_shell.

        * DumpRenderTree/chromium/TestRunner/src/WebPreferences.cpp:
        (WebTestRunner::WebPreferences::reset): Turn on resize corner.

2013-01-30  Jochen Eisinger  <jochen@chromium.org>

        [chromium] move custom policy delegate to TestRunner library
        https://bugs.webkit.org/show_bug.cgi?id=108328

        Reviewed by Adam Barth.

        * DumpRenderTree/chromium/TestRunner/public/WebTestDelegate.h:
        * DumpRenderTree/chromium/TestRunner/public/WebTestProxy.h:
        (WebTestProxyBase):
        (WebTestRunner::WebTestProxy::decidePolicyForNavigation):
        * DumpRenderTree/chromium/TestRunner/public/WebTestRunner.h:
        (WebTestRunner::WebTestRunner::policyDelegateEnabled):
        (WebTestRunner::WebTestRunner::policyDelegateIsPermissive):
        (WebTestRunner::WebTestRunner::policyDelegateShouldNotifyDone):
        * DumpRenderTree/chromium/TestRunner/src/TestRunner.cpp:
        (WebTestRunner::TestRunner::reset):
        (WebTestRunner::TestRunner::policyDelegateEnabled):
        (WebTestRunner):
        (WebTestRunner::TestRunner::policyDelegateIsPermissive):
        (WebTestRunner::TestRunner::policyDelegateShouldNotifyDone):
        (WebTestRunner::TestRunner::setCustomPolicyDelegate):
        (WebTestRunner::TestRunner::waitForPolicyDelegate):