@@ -1,3 +1,12 @@
+2013-01-30  Roger Fong  <roger_fong@apple.com>
+
+        Modify runtests.py script so that --skip-failing-tests option is not added when platform is cygwin.
+
+        Rubberstamped by Timothy Horton.
+
+        * Scripts/webkitpy/tool/steps/runtests.py:
+        (RunTests.run):
+
 2013-01-30  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r141205.
